--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
-    "passport-local-mongoose": "^7.1.2"
+    "passport-local-mongoose": "^7.1.2",
+    "qrcode": "^1.5.3"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
