--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --inspect src/index.js"
   },
+  "keywords": [
+    "Paypal"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.3.6",
+    "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "bluebird": "^3.7.2",
     "body-parser": "^1.20.0",
@@ -25,7 +28,10 @@
     "mongoose-slug-generator": "^1.0.4",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^6.9.2",
     "passport": "^0.6.0",
+    "passport-facebook-token": "^4.0.0",
+    "passport-google-plus-token": "^2.1.0",
     "passport-jwt": "^4.0.0",
     "passport-local-mongoose": "^7.1.2",
     "qrcode": "^1.5.3"
@@ -33,6 +39,7 @@
   "devDependencies": {
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
+    "paypal-rest-sdk": "^1.8.1",
     "prettier": "^2.7.1"
   }
 }
