--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
-src/config
+# src/config
 # TypeScript v1 declaration files
 typings/
 
