--- a/package.json
+++ b/package.json
@@ -36,12 +36,13 @@
     "passport-google-plus-token": "^2.1.0",
     "passport-jwt": "^4.0.0",
     "passport-local-mongoose": "^7.1.2",
-    "qrcode": "^1.5.3"
+    "qrcode": "^1.5.3",
+    "paypal-rest-sdk": "^1.8.1"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
   
-    "paypal-rest-sdk": "^1.8.1",
+  
     "prettier": "^2.7.1"
   }
 }
