--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 CLOUDINARY_NAME= "duytmd7ue"
-CLOUDINARY_KEY= "943622875468682"
+CLOUDINARY_KEY= "CLOUDINARY_KEY"
 CLOUDINARY_SECRET= "fnKEK_bDDA6jP8noBwVSYWAbFho"
 PORT = 8080
 USER="hiepnmhh.hh@gmail.com"
-
+MONGO_URI = mongodb://localhost:27017/DATN_Moive
 MONGODB_DATABASE=bezkoder_db
 MONGODB_LOCAL_PORT=7017
 MONGODB_DOCKER_PORT=27017
