--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ CLOUDINARY_KEY= "CLOUDINARY_KEY"
 CLOUDINARY_SECRET= "fnKEK_bDDA6jP8noBwVSYWAbFho"
 PORT = 8080
 USER="hiepnmhh.hh@gmail.com"
-MONGO_URI = mongodb://localhost:27017/DATN_Moive
+MONGO_URI =mongodb+srv://xuan:nhathiep123@cluster0.aihrsvp.mongodb.net/?Moives
 MONGODB_DATABASE=bezkoder_db
 MONGODB_LOCAL_PORT=7017
 MONGODB_DOCKER_PORT=27017
